feat: add Technologies and Terminal components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,13 @@ body {
   @apply bg-background text-neutral-100;
   @apply m-0 p-0 box-border;
 }
+
+.blink {
+  animation: blink-animation 1s steps(2, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
