--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,9 @@ body {
     visibility: hidden;
   }
 }
+
+input:focus-visible,
+textarea:focus-visible {
+  --tw-ring-shadow: 0 0 #0000 !important;
+  box-shadow: none !important;
+}
